--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AD Michael Kors PopUp </title>
-    <link rel="stylesheet" href="/CSS/style.css">
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script src="/static/js/script.js" defer></script>
  </head>
  <body>
     <header>
