--- a/templates/main.html
+++ b/templates/main.html
@@ -52,7 +52,36 @@
                     <p class="description"> Brown/Acorn </p>
                     <p class="price">$398</p>
                 </div>
-                
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F2G6AC1B-1335_1?$large$" alt="Marilyn Small Logo Crossbody Bag"
+                    <h3>Marilyn Small Logo Crossbody Bag </h3>
+                    <p class="description"> </p>
+                    <p class="price">$258</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32T4GJ6C1C-2068_1?$large$" alt="Jet Set Small Logo Print Woven Smartphone Crossbody Bag"
+                    <h3>Jet Set Small Logo Print Woven Smartphone Crossbody Bag </h3>
+                    <p class="description"> </p>
+                    <p class="price">$128</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6E7B-0150_1?$large$" alt="Large Logo Continental Wallet"
+                    <h3>Large Logo Continental Wallet </h3>
+                    <p class="description"> </p>
+                    <p class="price">$178</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6W4B-0150_1?$large$" alt="Adele Logo Smartphone Wallet"
+                    <h3>Adele Logo Smartphone Wallet </h3>
+                    <p class="description"> </p>
+                    <p class="price">$128</p>
+                </div>
+                <div class="product card">
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GTBT7B-1335_1?$large$" alt="Taryn Large Signature Logo and Leather Tote Bag"
+                    <h3>Taryn Large Signature Logo and Leather Tote Bag </h3>
+                    <p class="description"> </p>
+                    <p class="price">$298</p>
+                </div>
             </div>
         </section>
 
