Updates to main.html

--- a/templates/main.html
+++ b/templates/main.html
@@ -25,63 +25,65 @@
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F4G8EW6B-1092_1?$large$" alt="Empire Medium Metallic Chain-Link Pochette"
                     <h3> Empire Medium Metallic Chain-Link Pochette</h3>
-                    <p class="description"> Black/Pale Gold</p>
+                    <p class="description"> Color: Black/Pale Gold</p>
                     <p class="price">$198</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GETS2B-1335_1?$large$" alt="Scarlett Medium Signature Logo Satchel"
                     <h3>Scarlett Medium Signature Logo Satchel</h3>
-                    <p class="description"> Brown/Acorn </p>
+                    <p class="description"> Color: Brown/Acorn </p>
                     <p class="price">$298</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30S2G6AS2U-2158_1?$large$" alt="Marilyn Medium Logo Stripe Satchel"
                     <h3>Marilyn Medium Logo Stripe Satchel </h3>
-                    <p class="description"> Brown/Soft Pink/Fawn </p>
+                    <p class="description"> Color: Brown/Soft Pink/Fawn </p>
                     <p class="price">$298</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32H1GT9C1B-1335_1?$large$" alt="Jet Set Charm Small Logo Pochette"
                     <h3>Jet Set Charm Small Logo Pochette </h3>
-                    <p class="description"> Brown/Acorn </p>
+                    <p class="description"> Color: Brown/Acorn </p>
                     <p class="price">$198</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F9G07U4B-1335_1?$large$" alt="Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag"
                     <h3>Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag </h3>
-                    <p class="description"> Brown/Acorn </p>
+                    <p class="description"> Color: Brown/Acorn </p>
                     <p class="price">$398</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F2G6AC1B-1335_1?$large$" alt="Marilyn Small Logo Crossbody Bag"
                     <h3>Marilyn Small Logo Crossbody Bag </h3>
-                    <p class="description"> </p>
+                    <p class="description"> Color: Brown/Acorn </p>
                     <p class="price">$258</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32T4GJ6C1C-2068_1?$large$" alt="Jet Set Small Logo Print Woven Smartphone Crossbody Bag"
                     <h3>Jet Set Small Logo Print Woven Smartphone Crossbody Bag </h3>
-                    <p class="description"> </p>
+                    <p class="description"> Color: Admiral/Blue </p>
                     <p class="price">$128</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6E7B-0150_1?$large$" alt="Large Logo Continental Wallet"
                     <h3>Large Logo Continental Wallet </h3>
-                    <p class="description"> </p>
+                    <p class="description"> Color: Vanilla </p>
                     <p class="price">$178</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6W4B-0150_1?$large$" alt="Adele Logo Smartphone Wallet"
                     <h3>Adele Logo Smartphone Wallet </h3>
-                    <p class="description"> </p>
+                    <p class="description"> Color: Vanilla </p>
                     <p class="price">$128</p>
                 </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GTBT7B-1335_1?$large$" alt="Taryn Large Signature Logo and Leather Tote Bag"
                     <h3>Taryn Large Signature Logo and Leather Tote Bag </h3>
-                    <p class="description"> </p>
+                    <p class="description"> Color: Brown/Acorn </p>
                     <p class="price">$298</p>
                 </div>
+
+
             </div>
         </section>
 
