--- a/templates/cart.html
+++ b/templates/cart.html
@@ -27,7 +27,7 @@
     </main>
 
     <footer>
-        <p>$copy; 2024 Michael Kors Popup</p>
+        <p>&copy; 2024 AD's Michael Kors PopUp</p>
     </footer>
     
 </body>
