--- a/templates/main.html
+++ b/templates/main.html
@@ -95,7 +95,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Michael Kors Popup Store</p>
+        <p>&copy; 2024 AD's Michael Kors PopUp</p>
     </footer>
  </body>
  </html>
