Added new READ.ME

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AD Michael Kors PopUp </title>
+    <title>AD's Michael Kors PopUp </title>
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="/static/js/script.js" defer></script>
  </head>
