--- a/templates/cart.html
+++ b/templates/cart.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MK Shopping Cart</title>
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="/static/js/cart.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>MK Shopping Cart</h1>
+        <h1>Shopping Cart</h1>
         <nav>
             <a href="main.html"> Home</a>
         </nav>
