--- a/templates/main.html
+++ b/templates/main.html
@@ -23,67 +23,84 @@
             <h4> Limited Time Only!</h4>
             <div id="Products">
                 <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F4G8EW6B-1092_1?$large$" alt="Empire Medium Metallic Chain-Link Pochette"
-                    <h3> Empire Medium Metallic Chain-Link Pochette</h3>
-                    <p class="description"> Color: Black/Pale Gold</p>
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F4G8EW6B-1092_1?$large$" alt="Empire Medium Metallic Chain-Link Pochette" height="700px" width="500px"
+                </div>
+                    <h3 class="product name"> Empire Medium Metallic Chain-Link Pochette</h3>
+                    <li class="description"> Black/Pale Gold</li>
                     <p class="price">$198</p>
-                </div>
+                    <button onclick="addToCart('Empire Medium Metallic Chain-Link Pochette', 198.00)">Add to Cart</button>
+               
                 <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GETS2B-1335_1?$large$" alt="Scarlett Medium Signature Logo Satchel"
-                    <h3>Scarlett Medium Signature Logo Satchel</h3>
-                    <p class="description"> Color: Brown/Acorn </p>
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GETS2B-1335_1?$large$" alt="Scarlett Medium Signature Logo Satchel" height="700px" width="500px"
+                </div>
+                    <h3 class="product name">Scarlett Medium Signature Logo Satchel</h3>
+                    <li class="description"> Brown/Acorn </li>
                     <p class="price">$298</p>
-                </div>
+                    <button onclick="addToCart('Scarlett Medium Signature Logo Satchel', 298.00)">Add to Cart</button>
+                
                 <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30S2G6AS2U-2158_1?$large$" alt="Marilyn Medium Logo Stripe Satchel"
-                    <h3>Marilyn Medium Logo Stripe Satchel </h3>
-                    <p class="description"> Color: Brown/Soft Pink/Fawn </p>
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30S2G6AS2U-2158_1?$large$" alt="Marilyn Medium Logo Stripe Satchel" height="700px" width="500px"
+                </div>
+                    <h3 class="product name">Marilyn Medium Logo Stripe Satchel </h3>
+                    <li class="description"> Brown/Soft Pink/Fawn </li>
                     <p class="price">$298</p>
-                </div>
+                    <button onclick="addToCart('Marilyn Medium Logo Stripe Satchel', 298.00)">Add to Cart</button>
+               
                 <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32H1GT9C1B-1335_1?$large$" alt="Jet Set Charm Small Logo Pochette"
-                    <h3>Jet Set Charm Small Logo Pochette </h3>
-                    <p class="description"> Color: Brown/Acorn </p>
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32H1GT9C1B-1335_1?$large$" alt="Jet Set Charm Small Logo Pochette" height="700px" width="500px"
+                </div>
+                    <h3 class="product name">Jet Set Charm Small Logo Pochette </h3>
+                    <li class="description"> Brown/Acorn </li>
                     <p class="price">$198</p>
-                </div>
+                    <button onclick="addToCart('Jet Set Charm Small Logo Pochette', 198.00)">Add to Cart</button>
+                
                 <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F9G07U4B-1335_1?$large$" alt="Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag"
-                    <h3>Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag </h3>
-                    <p class="description"> Color: Brown/Acorn </p>
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F9G07U4B-1335_1?$large$" alt="Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag" height="700px" width="500px"
+                </div>
+                    <h3 class="product name">Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag </h3>
+                    <li class="description"> Brown/Acorn </li>
                     <p class="price">$398</p>
-                </div>
+                    <button onclick="addToCart('Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag', 398.00)">Add to Cart</button>
+                
                 <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F2G6AC1B-1335_1?$large$" alt="Marilyn Small Logo Crossbody Bag"
-                    <h3>Marilyn Small Logo Crossbody Bag </h3>
-                    <p class="description"> Color: Brown/Acorn </p>
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F2G6AC1B-1335_1?$large$" alt="Marilyn Small Logo Crossbody Bag" height="700px" width="500px"
+                </div>
+                    <h3 class="product name"> Marilyn Small Logo Crossbody Bag</h3>
+                    <li class="description"> Brown/Acorn </li>
                     <p class="price">$258</p>
-                </div>
+                    <button onclick="addToCart('Marilyn Small Logo Crossbody Bag', 258.00)">Add to Cart</button>
+                   
                 <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32T4GJ6C1C-2068_1?$large$" alt="Jet Set Small Logo Print Woven Smartphone Crossbody Bag"
-                    <h3>Jet Set Small Logo Print Woven Smartphone Crossbody Bag </h3>
-                    <p class="description"> Color: Admiral/Blue </p>
+                    <img src="" alt="Jet Set Small Logo Print Woven Smartphone Crossbody Bag" height="700px" width="500px"
+                </div>
+                    <h3 class="product name"> Jet Set Small Logo Print Woven Smartphone Crossbody Bag</h3>
+                    <li class="description">Admiral/Palace Blue </li>
                     <p class="price">$128</p>
-                </div>
-                <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6E7B-0150_1?$large$" alt="Large Logo Continental Wallet"
-                    <h3>Large Logo Continental Wallet </h3>
-                    <p class="description"> Color: Vanilla </p>
-                    <p class="price">$178</p>
-                </div>
-                <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6W4B-0150_1?$large$" alt="Adele Logo Smartphone Wallet"
-                    <h3>Adele Logo Smartphone Wallet </h3>
-                    <p class="description"> Color: Vanilla </p>
-                    <p class="price">$128</p>
-                </div>
-                <div class="product card">
-                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GTBT7B-1335_1?$large$" alt="Taryn Large Signature Logo and Leather Tote Bag"
-                    <h3>Taryn Large Signature Logo and Leather Tote Bag </h3>
-                    <p class="description"> Color: Brown/Acorn </p>
-                    <p class="price">$298</p>
-                </div>
+                    <button onclick="addToCart('Jet Set Small Logo Print Woven Smartphone Crossbody Bag', 258.00)">Add to Cart</button>   
 
+                <div class="product card">
+                    <img src="" alt="Large Logo Continental Wallet" height="700px" width="500px"
+                </div>
+                <h3 class="product name">Large Logo Continental Wallet</h3>
+                <li class="description">Vanilla</li>
+                <p class="price">$178</p>
+                <button onclick="addToCart('Large Logo Continental Wallet', 178.00)"> Add to Cart</button>
 
+                <div class="product card">
+                    <img src="" alt="Adele Logo Smartphone Wallet" height="700px" width="500px"
+                </div>
+                <h3 class="product name">Adele Logo Smartphone Wallet</h3>
+                <li class="description">Vanilla</li>
+                <p class="price">$128</p>
+                <button onclick="addToCart('Adele Logo Smartphone Wallet', 128.00)">Add to Cart</button>
+
+                <div class="product card">
+                    <img src="" alt="Taryn Large Signature Logo and Leather Tote Bag" height="700px" width="500px"
+                </div>
+                <h3 class="product name">Taryn Large Signature Logo and Leather Tote Bag</h3>
+                <li class="description">Brown/Acorn</li>
+                <p class="price">$298</p>
+                <button onclick="addToCart('Taryn Large Signature Logo and Leather Tote Bag', 298.00)">Add to Cart</button>
             </div>
         </section>
 
@@ -95,7 +112,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 AD's Michael Kors PopUp</p>
+        <p>&copy; 2024 Michael Kors Popup Store</p>
     </footer>
  </body>
  </html>
