Adding finishing links into products

--- a/templates/main.html
+++ b/templates/main.html
@@ -71,7 +71,7 @@
                     <button onclick="addToCart('Marilyn Small Logo Crossbody Bag', 258.00)">Add to Cart</button>
                    
                 <div class="product card">
-                    <img src="" alt="Jet Set Small Logo Print Woven Smartphone Crossbody Bag" height="700px" width="500px"
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32T4GJ6C1C-2068_1?$large$" alt="Jet Set Small Logo Print Woven Smartphone Crossbody Bag" height="700px" width="500px"
                 </div>
                     <h3 class="product name"> Jet Set Small Logo Print Woven Smartphone Crossbody Bag</h3>
                     <li class="description">Admiral/Palace Blue </li>
@@ -79,7 +79,7 @@
                     <button onclick="addToCart('Jet Set Small Logo Print Woven Smartphone Crossbody Bag', 258.00)">Add to Cart</button>   
 
                 <div class="product card">
-                    <img src="" alt="Large Logo Continental Wallet" height="700px" width="500px"
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6E7B-0150_1?$large$" alt="Large Logo Continental Wallet" height="700px" width="500px"
                 </div>
                 <h3 class="product name">Large Logo Continental Wallet</h3>
                 <li class="description">Vanilla</li>
@@ -87,7 +87,7 @@
                 <button onclick="addToCart('Large Logo Continental Wallet', 178.00)"> Add to Cart</button>
 
                 <div class="product card">
-                    <img src="" alt="Adele Logo Smartphone Wallet" height="700px" width="500px"
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6W4B-0150_1?$large$" alt="Adele Logo Smartphone Wallet" height="700px" width="500px"
                 </div>
                 <h3 class="product name">Adele Logo Smartphone Wallet</h3>
                 <li class="description">Vanilla</li>
@@ -95,7 +95,7 @@
                 <button onclick="addToCart('Adele Logo Smartphone Wallet', 128.00)">Add to Cart</button>
 
                 <div class="product card">
-                    <img src="" alt="Taryn Large Signature Logo and Leather Tote Bag" height="700px" width="500px"
+                    <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GTBT7B-1335_1?$large$" alt="Taryn Large Signature Logo and Leather Tote Bag" height="700px" width="500px"
                 </div>
                 <h3 class="product name">Taryn Large Signature Logo and Leather Tote Bag</h3>
                 <li class="description">Brown/Acorn</li>
