--- a/templates/index.html
+++ b/templates/index.html
@@ -29,15 +29,15 @@
                     <h3 class="product name"> Empire Medium Metallic Chain-Link Pochette</h3>
                     <li class="description"> Black/Pale Gold</li>
                     <p class="price">$198</p>
-                    <button onclick="addToCart('Empire Medium Metallic Chain-Link Pochette', 198.00)">Add to Cart</button>
-               
+                    <button onclick="addToCart('1')">Add to Cart</button>
+               </div>
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GETS2B-1335_1?$large$" alt="Scarlett Medium Signature Logo Satchel" height="700px" width="500px"
                 </div>
                     <h3 class="product name">Scarlett Medium Signature Logo Satchel</h3>
                     <li class="description"> Brown/Acorn </li>
                     <p class="price">$298</p>
-                    <button onclick="addToCart('Scarlett Medium Signature Logo Satchel', 298.00)">Add to Cart</button>
+                    <button onclick="addToCart('2')">Add to Cart</button>
                 
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30S2G6AS2U-2158_1?$large$" alt="Marilyn Medium Logo Stripe Satchel" height="700px" width="500px"
@@ -45,7 +45,7 @@
                     <h3 class="product name">Marilyn Medium Logo Stripe Satchel </h3>
                     <li class="description"> Brown/Soft Pink/Fawn </li>
                     <p class="price">$298</p>
-                    <button onclick="addToCart('Marilyn Medium Logo Stripe Satchel', 298.00)">Add to Cart</button>
+                    <button onclick="addToCart('3')">Add to Cart</button>
                
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32H1GT9C1B-1335_1?$large$" alt="Jet Set Charm Small Logo Pochette" height="700px" width="500px"
@@ -53,7 +53,7 @@
                     <h3 class="product name">Jet Set Charm Small Logo Pochette </h3>
                     <li class="description"> Brown/Acorn </li>
                     <p class="price">$198</p>
-                    <button onclick="addToCart('Jet Set Charm Small Logo Pochette', 198.00)">Add to Cart</button>
+                    <button onclick="addToCart('4')">Add to Cart</button>
                 
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F9G07U4B-1335_1?$large$" alt="Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag" height="700px" width="500px"
@@ -61,7 +61,7 @@
                     <h3 class="product name">Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag </h3>
                     <li class="description"> Brown/Acorn </li>
                     <p class="price">$398</p>
-                    <button onclick="addToCart('Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag', 398.00)">Add to Cart</button>
+                    <button onclick="addToCart('5')">Add to Cart</button>
                 
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F2G6AC1B-1335_1?$large$" alt="Marilyn Small Logo Crossbody Bag" height="700px" width="500px"
@@ -69,7 +69,7 @@
                     <h3 class="product name"> Marilyn Small Logo Crossbody Bag</h3>
                     <li class="description"> Brown/Acorn </li>
                     <p class="price">$258</p>
-                    <button onclick="addToCart('Marilyn Small Logo Crossbody Bag', 258.00)">Add to Cart</button>
+                    <button onclick="addToCart('6')">Add to Cart</button>
                    
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32T4GJ6C1C-2068_1?$large$" alt="Jet Set Small Logo Print Woven Smartphone Crossbody Bag" height="700px" width="500px"
@@ -77,7 +77,7 @@
                     <h3 class="product name"> Jet Set Small Logo Print Woven Smartphone Crossbody Bag</h3>
                     <li class="description">Admiral/Palace Blue </li>
                     <p class="price">$128</p>
-                    <button onclick="addToCart('Jet Set Small Logo Print Woven Smartphone Crossbody Bag', 258.00)">Add to Cart</button>   
+                    <button onclick="addToCart('7')">Add to Cart</button>   
 
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6E7B-0150_1?$large$" alt="Large Logo Continental Wallet" height="700px" width="500px"
@@ -85,7 +85,7 @@
                 <h3 class="product name">Large Logo Continental Wallet</h3>
                 <li class="description">Vanilla</li>
                 <p class="price">$178</p>
-                <button onclick="addToCart('Large Logo Continental Wallet', 178.00)"> Add to Cart</button>
+                <button onclick="addToCart('8')"> Add to Cart</button>
 
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F1GJ6W4B-0150_1?$large$" alt="Adele Logo Smartphone Wallet" height="700px" width="500px"
@@ -93,7 +93,7 @@
                 <h3 class="product name">Adele Logo Smartphone Wallet</h3>
                 <li class="description">Vanilla</li>
                 <p class="price">$128</p>
-                <button onclick="addToCart('Adele Logo Smartphone Wallet', 128.00)">Add to Cart</button>
+                <button onclick="addToCart('9')">Add to Cart</button>
 
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/30F4GTBT7B-1335_1?$large$" alt="Taryn Large Signature Logo and Leather Tote Bag" height="700px" width="500px"
@@ -101,16 +101,18 @@
                 <h3 class="product name">Taryn Large Signature Logo and Leather Tote Bag</h3>
                 <li class="description">Brown/Acorn</li>
                 <p class="price">$298</p>
-                <button onclick="addToCart('Taryn Large Signature Logo and Leather Tote Bag', 298.00)">Add to Cart</button>
+                <button onclick="addToCart('10')">Add to Cart</button>
             </div>
+            {% endfor %}
+          </div>
         </section>
+        
 
         <section id="Cart-Summary">
             <h3> Shopping Cart</h3>
             <p>Total: $<span id="Cart-Total">0.00</span></p>
             <a href="cart.html"> Go to Cart </a>
         </section>
-        
     </main>
 
     <footer>
