--- a/templates/cart.html
+++ b/templates/cart.html
@@ -21,16 +21,22 @@
         <section id="Cart-Items">
             <h2>Your Cart</h2>
             <ul>
-                {% for item in cart['items'] %}    
                 <!-- Cart items will be placed here -->
                 <li>
-                    <h3>Empire Medium Metallic Chain-Link Pochette</h3>
-                    <p>Black/Pale Gold</p>
-                    <p>Price: $198</p>
-                </li>
-            </ul>
-            <p>Total:$198 </p>
+                    <h3>Empire Medium Metallic Chain-Link Pochette</h3></li>
+                <li>
+                    <h3>Scarlett Medium Signature Logo Satchel</h3></li>
+                    <li> <h3>Marilyn Medium Logo Stripe Satchel</h3></li>
+                    <li> <h3>Jet Set Charm Small Logo Pochette</h3></li>
+                    <li> <h3>Bedford Travel Extra-Large Signature Logo Stripe Weekender Bag</h3></li>
+                    <li> <h3>Marilyn Small Logo Crossbody Bag</h3></li>
+                    <li> <h3>Jet Set Small Logo Print Woven Smartphone Crossbody Bag</h3></li>
+                    <li> <h3>Large Logo Continental Wallet</h3></li>
+                    <li> <h3>Adele Logo Smartphone Wallet</h3></li>
+                    <li> <h3>Taryn Large Signature Logo and Leather Tote Bag</h3></li>
+                
             
+
         </section>
     </main>
 
