--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <h2> Our Collection</h2>
             <h4> Limited Time Only!</h4>
             <div id="Products">
-                {% for product in products['products'] %}    
+                <!-- {% for product in products['products'] %}     -->
                 <div class="product card">
                     <img src="https://michaelkors.scene7.com/is/image/MichaelKors/32F4G8EW6B-1092_1?$large$" alt="Empire Medium Metallic Chain-Link Pochette" height="700px" width="500px"
                 </div>
@@ -103,7 +103,6 @@
                 <p class="price">$298</p>
                 <button onclick="addToCart('10')">Add to Cart</button>
             </div>
-            {% endfor %}
           </div>
         </section>
         
